# Personal-Finance-Analyzer

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  appspec.yml  pfa-api.service  pfa-worker.service  pyproject.toml  run_workers.py
backend/alembic/: env.py
backend/alembic/versions/: 20260309_001_initial_schema.py  20260311_002_add_google_oauth.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  billing.py  budgets.py  dashboard.py  google_auth.py  reports.py  router.py  statements.py  suggestions.py  transactions.py  users.py
backend/app/kafka/: producer.py  schemas.py  topics.py
backend/app/models/: __init__.py  budget.py  report.py  statement.py  suggestion.py  transaction.py  user.py
backend/app/schemas/: auth.py  billing.py  budget.py  dashboard.py  report.py  statement.py  suggestion.py  transaction.py  user.py
backend/app/services/: ai_service.py  analytics_service.py  anomaly_service.py  auth_service.py  billing_service.py  email_service.py  ml_service.py  report_service.py  statement_service.py  suggestion_service.py
backend/app/sqs/: __init__.py  producer.py  queues.py
backend/app/templates/email/: monthly_report.html
backend/app/utils/: csv_parser.py  health_score.py  pdf_parser.py  s3.py  security.py
backend/app/workers/: ai_categorizer.py  anomaly_detector.py  base_worker.py  email_sender.py  ml_predictor.py  report_generator.py  statement_parser.py  suggestion_engine.py
backend/scripts/: after-install.sh  before-install.sh  start-server.sh  validate-service.sh
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_billing.py  test_budgets.py  test_categorization.py  test_csv_parser.py  test_reports.py  test_security.py  test_statements.py  test_suggestions.py
docs/: aws-deploy.md  local-testing.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: header.tsx  loading-skeleton.tsx  providers.tsx  sidebar.tsx  stat-card.tsx
frontend/src/components/charts/: savings-chart.tsx  spending-pie.tsx  trend-chart.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/stores/: authStore.ts
infrastructure/: cdk.context.json  cdk.json  github-actions-policy.json  package-lock.json  package.json
infrastructure/lambda/cdn_invalidator/: index.py
infrastructure/lib/: app-stack.ts  data-stack.ts  network-stack.ts
infrastructure/scripts/: setup-ssm-params.sh
(+11 files in other folders)
